@@ -1,0 +1,2 @@
+﻿[/paths]
+exe-path = ./tmp
